--- a/index.html
+++ b/index.html
@@ -9,45 +9,154 @@
 
     <script type="text/javascript">
 
-    var Game = function() {
 
-    this._width = window.innerWidth;
-    this._height = window.innerHeight;
+    // _width = window.innerWidth;
+    // _height = window.innerHeight;
 
-    this.game = new Phaser.Game(this._width, this._height, Phaser.AUTO, '', {
-        preload: this.preload,
-        create: this.create,
-        update: this.update
-    });
-}
+    var game = new Phaser.Game(800, 600, Phaser.AUTO, 'gameContainer', { preload: preload, create: create, update: update });
+    var player;
+    var cursors;
+    var direction = "down";
+    var speed;
+    var spaceKey;
 
-Game.prototype = {
-    preload: function() {
-        this.game.load.tilemap('MyTilemap', 'rpgmap.json', null, Phaser.Tilemap.TILED_JSON);
-        this.game.load.image('grass', 'grass-tiles.png');
-        this.game.load.image('tree', 'tree-tile.png');
-    },
-    create: function() {
-          // Load the map.
-        map = this.game.add.tilemap('MyTilemap');
+    function preload() {
+        game.load.spritesheet('dude', 'newguy.png', 30, 32);
+	    game.load.spritesheet('adam', 'adam.png', 30, 32);
+        game.load.tilemap('MyTilemap', 'rpgmap.json', null, Phaser.Tilemap.TILED_JSON);
+        game.load.image('grass', 'grass-tiles.png');
+        game.load.image('tree', 'tree-tile.png');
+    }
+    function create() {
+        spaceKey = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
+        game.world.setBounds(0, 0, 1920, 1920);
+
+        map = game.add.tilemap('MyTilemap');
         map.addTilesetImage('grass', 'grass');
         map.addTilesetImage('tree', 'tree');
+        map.addTilesetImage('tree', 'tree');
+
+        map.setCollisionBetween(1, 12);
+
+        trunk = game.add.group();
+        trunk.enableBody = true;
+        map.createFromObjects('Trunk', 1, 'tree', 0, true, false, trunk);
+
+        // if (map.objects.Trunk) {
+        // const trunk = map.objects.Trunk;
+        // trunk.forEach(bumper => {
+        //     // do something here with the data
+        //     console.log(bumper);
+        // });
+        // }
 
         layer = map.createLayer('Background');
-        layer.resizeWorld();
         layer = map.createLayer('Foreground');
-        layer.resizeWorld();
         layer = map.createLayer('Treetop');
         layer.resizeWorld();
         layer.wrap = true;
 
-        this.cursors = this.game.input.keyboard.createCursorKeys();
+        player = game.add.sprite(200, 200, 'dude');
+        game.physics.enable(player, Phaser.Physics.ARCADE);
+        player.body.collideWorldBounds = true;
 
-    },
-    update: function() {
+        enemy = game.add.sprite(game.world.centerX - 50, game.world.centerY - 50, 'adam');
+        game.physics.enable(enemy, Phaser.Physics.ARCADE);
+        enemy.body.immovable = true;
+        enemy.body.moves =false;
+        enemy.body.collideWorldBounds = true;
+        //game.physics.p2.enable(player);
+        player.anchor.setTo(0.5, 0.5);
+        game.camera.follow(player, Phaser.Camera.FOLLOW_TOPDOWN);
+
+        //animations
+        player.animations.add('down', [0, 1, 2], 10, true);
+        player.animations.add('left', [3, 4, 5], 10, true);
+        player.animations.add('right', [6, 7,8], 10, true);
+        player.animations.add('up', [9, 10, 11], 10, true);
+
+        cursors = game.input.keyboard.createCursorKeys();
 
     }
-}
+    function update() {
+	if(game.physics.arcade.collide(player, enemy)){
+		if (confirm('Are you sure you want to save this thing into the database?')) {
+    		// Save it!
+		} else {
+			// Do nothing!
+		}
+	}
+	player.body.velocity.x = 0
+	player.body.velocity.y = 0
+
+
+	if (cursors.left.isDown)
+	{
+		if(spaceKey.isDown)
+		{
+			speed = -500;
+		}else{
+			speed = -300;
+		}
+		player.body.velocity.x = speed
+	//	player.body.moveLeft(speed);
+		player.animations.play('left');
+		direction = "left";
+	}
+	else if (cursors.right.isDown)
+	{
+		if(spaceKey.isDown)
+		{
+			speed = 500;
+		}else{
+			speed = 300;
+		}
+		player.body.velocity.x = speed
+		//player.body.moveRight(speed);
+		player.animations.play('right');
+		direction = "right";
+	}
+	else if (cursors.up.isDown)
+	{
+		if(spaceKey.isDown)
+		{
+			speed = -500;
+		}else{
+			speed = -300;
+		}
+		player.body.velocity.y = speed
+		//player.body.moveUp(speed);
+		player.animations.play('up');
+		direction = "up";
+	}
+	else if (cursors.down.isDown)
+	{
+		if(spaceKey.isDown)
+		{
+			speed = 500;
+		}else{
+			speed = 300;
+		}
+		player.body.velocity.y = speed
+		//player.body.moveDown(speed);
+		player.animations.play('down');
+		direction = "down";
+	}
+	else {
+		player.animations.stop(null, true);
+		if(direction === "left"){
+			player.frame = 4;
+		}else if(direction === "right"){
+			player.frame = 7;
+		}else if(direction === "up"){
+			player.frame = 10;
+		}else{
+			player.frame = 1;
+		}
+
+
+	}
+    }
 
 new Game();
 
