hidden collisions make bottom layer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
     </head>
     <body>
