--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
     </head>
     <body>
+		<div class="score-card">
+			<div class="property"><h2>Level: </h2><span id="player-level" class="amount"> 0</span></div>
+			<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
+			<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
+			<button id="inventory">Inventory</button>
+		</div>
+		<div class="score-card">
+			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon" class="amount"></span></div>
+			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount"></span></div>
+		</div>
     <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
