prevent double collisions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
     </head>
     <body>
+
+		</div>
 		<div class="score-card">
-			<div class="property"><h2>Level: </h2><span id="player-level" class="amount"> 0</span></div>
+			<div class="property"><h2>Level: </h2><span id="player-level" class="amount">0</span></div>
 			<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
 			<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
 			<button id="inventory">Inventory</button>
