--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon" class="amount"></span></div>
 			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount"></span></div>
 		</div>
+		<div id="gameContainer"></div>
+		<div class="score-card">
+			<div class="property"><h2>Messages: </h2><span id="dialog"></span></div>
+			<span id="dialog"></span>
+		</div>
     <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
