text on screen etc

--- a/index.html
+++ b/index.html
@@ -13,18 +13,13 @@
 			<div class="property"><h2>Level: </h2><span id="player-level" class="amount">0</span></div>
 			<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
 			<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
+			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon" class="amount">N/A</span></div>
+			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount">N/A</span></div>
 			<button id="inventory">Inventory</button>
 		</div>
-		<div class="score-card">
-			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon" class="amount"></span></div>
-			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount"></span></div>
-		</div>
 		<div id="gameContainer"></div>
-		<div class="score-card">
-			<div class="property"><h2>Messages: </h2><span id="dialog"></span></div>
-			<span id="dialog"></span>
-		</div>
-    <script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="js/dialog.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
 
