better organized js

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 			<button id="inventory">Inventory</button>
 		</div>
 		<div id="gameContainer"></div>
-	<script type="text/javascript" src="js/dialog.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/mechanics.js"></script>
+		<script type="text/javascript" src="js/dialog.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
 
