mroe improvements, fix bug, big tree convo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>hello phaser!</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
 
@@ -15,9 +16,21 @@
 			<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
 			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon" class="amount">N/A</span></div>
 			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount">N/A</span></div>
-			<button id="inventory">Inventory</button>
+			<button onclick="showInventory()" id="inventory">Inventory</button>
+		</div>
+		<div id="inventory-menu">
+			<label>Weapons</label>
+			<ul>
+				<li><input id="Checkbox1" name="Checkbox1" type="checkbox" value="Admin" />
+					<label for="Checkbox1">Sword</label>
+				</li>
+				<li><input id="Checkbox2" name="Checkbox2" type="checkbox" value="Admin" />
+					<label for="Checkbox2">Spear</label>
+				</li>
+			</ul>
 		</div>
 		<div id="gameContainer"></div>
+		<script type="text/javascript" src="js/inventory.js"></script>
 		<script type="text/javascript" src="js/mechanics.js"></script>
 		<script type="text/javascript" src="js/dialog.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
