some ideas for the battle, some meta in battle

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			<ul id="weapon-list">
 			</ul>
 		</div>
+		<div id="fight-log">
+		</div>
 		<div id="gameContainer"></div>
 		<script type="text/javascript" src="js/inventory.js"></script>
 		<script type="text/javascript" src="js/mechanics.js"></script>
