--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<div class="property"><h2>Level: </h2><span id="player-level" class="amount">0</span></div>
 			<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
 			<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
-			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon-equipped" class="amount">N/A</span></div>
+			<div class="property"><h2>Weapon Equipped: </h2><span id="weapon-equipped" class="amount">N/A</span>
+			<img src="assets/weaponicons/limb.png" height=32 width=32></img></div>
 			<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount">N/A</span></div>
 			<button onclick="showInventory()" id="inventory">Inventory</button>
 		</div>
@@ -23,9 +24,10 @@
 			<ul id="weapon-list">
 			</ul>
 		</div>
-		<div id="fight-log">
+		<div id="fight-Window">
 		</div>
 		<div id="gameContainer"></div>
+		<script type="text/javascript" src="js/battle.js"></script>
 		<script type="text/javascript" src="js/inventory.js"></script>
 		<script type="text/javascript" src="js/mechanics.js"></script>
 		<script type="text/javascript" src="js/dialog.js"></script>
