--- a/index.html
+++ b/index.html
@@ -3,27 +3,55 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
+		<link rel="stylesheet" type="text/css" href="js/vendor/foundation.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/vendor/jquery.js"></script>
+		<script type="text/javascript" src="js/vendor/foundation.min.js"></script>
+		<script type="text/javascript" src="js/vendor/jquery.js"></script>
     </head>
     <body>
 		<div id="main-game">
-			<div class="score-card">
-				<div class="property"><h2>Level: </h2><span id="player-level" class="amount">0</span></div>
-				<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
-				<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
-				<div class="property" id="weapon-equipped-property"><h2>Weapon Equipped: </h2><div class="image-container"><img id="weapon-image" src="" height=44 width=44></img></div><span id="weapon-equipped" class="amount">N/A</span></div>
-				<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount">N/A</span></div>
-				<button onclick="showInventory()" id="inventory">Inventory</button>
+			<div class="row">
+				<div class='small-12 small-centered columns'>
+					<div class="score-card">
+						<div class="property"><h2>Level: </h2><span id="player-level" class="amount">0</span></div>
+						<div class="property"><h2>Health: </h2><span id="player-health" class="amount"> 0</span></div>
+						<div class="property"><h2>Attack: </h2><span id="player-attack" class="amount"> 0</span></div>
+						<div class="property" id="weapon-equipped-property"><h2>Weapon Equipped: </h2><div class="image-container"><img id="weapon-image" src="" height=44 width=44></img></div><span id="weapon-equipped" class="amount">N/A</span></div>
+						<div class="property"><h2>Armor Equipped: </h2><span id="armor" class="amount">N/A</span></div>
+						<button onclick="showInventory()" id="inventory" class="button">Inventory</button>
+					</div>
+				</div>
 			</div>
-			<div id="inventory-menu">
-				<label>Weapons</label>
-				<ul id="weapon-list">
-				</ul>
+			<div class="row">
+				<div class='small-12 medium-8 medium-centered columns'>
+				<div id="inventory-menu">
+					<label>Weapons</label>
+					<ul id="weapon-list">
+					</ul>
+				</div>
+				</div>
 			</div>
-			<div id="fight-Window">
-			</div>
+				<div class='modal' id='fightWindow'>
+					<div class='small-12 medium-8 medium-centered columns'></div>
+						<div class='row modal-content'>
+							<!--<span class='close'>×</span>-->
+							<div class='small-12 columns'>
+								<div class="small-8 small-centered columns">
+									<h1>FIGHT!</h1>
+								</div>
+							</div>
+							<!--<div class='small-12 input-field columns'>
+							</div>
+							<div class='small-12 input-field columns'>
+							</div>
+							<div class='small-12 input-field columns'>
+							</div>
+							<div class='small-12 columns sign-up'>
+							</div>-->
+						</div>
+				</div>
 			<div id="gameContainer"></div>
 			<script type="text/javascript" src="js/models/player.js"></script>
 			<script type="text/javascript" src="js/battle.js"></script>
@@ -40,4 +68,3 @@
 		</div>
     </body>
 </html>
-
