some sick flashing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				</div>
 				</div>
 			</div>
+			<div id="flashScreen"></div>
 			<div class='modal' id='fightWindow'>
 				<div class='small-12 medium-8 medium-centered columns'></div>
 					<div class='row modal-content'>
@@ -51,16 +52,18 @@
 							</div>
 							<div class="row">
 								<div class='small-6 columns'>
-									<h4 id = "fw-player-weapon">Weapon: Limb</h4>
-									<h5>Moveset</h5>
-									<button id="fw-move1" class= "button">Strike</button>
-									<button id="fw-move2" class= "button">Powerful Strike</button>
+									<h4 id = "fw-player-weapon"></h4>
+									<h5>Moves:</h5>
+									<button id="fw-player-move1" class= "button"></button>
+									<button id="fw-player-move2" class= "button"></button>
 								</div>
 								<div class='small-6 columns'>
-									<h4 id = "fw-player-weapon">Weapon: Limb</h4>
-									<h5>Moveset</h5>
-									<button class= "button">Strike</button>
-									<button class= "button">Power Strike</button>
+									<h4 id = "fw-enemy-weapon"></h4>
+									<h5>Moves:</h5>
+									<div>
+										<h5 id="fw-enemy-move1"></h5>
+										<h5 id="fw-enemy-move2"></h5>
+									</div>
 								</div>
 							</div>
 						</div>
