fight loop almost

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 								<div class='small-6 columns'>
 									<h4 id = "fw-player-weapon"></h4>
 									<h5>Moves:</h5>
-									<button id="fw-player-move1" class= "button"></button>
-									<button id="fw-player-move2" class= "button"></button>
+									<button id="fw-player-move1" class= "button player-move-button"></button>
+									<button id="fw-player-move2" class= "button player-move-button"></button>
 								</div>
 								<div class='small-6 columns'>
 									<h4 id = "fw-enemy-weapon"></h4>
