--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 						</div>
 					</div>
 				</div>
-			<div id="gameContainer"></div>
+			<div class="row">
+				<div class='small-12 small-centered columns'>
+					<div id="gameContainer"></div>
+				</div>
+			</div>
 			<script type="text/javascript" src="js/models/player.js"></script>
 			<script type="text/javascript" src="js/battle.js"></script>
 			<script type="text/javascript" src="js/inventory.js"></script>
