restructuring the json

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>hello phaser!</title>
 		<link rel="stylesheet" type="text/css" href="js/vendor/foundation.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
-        <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
 		<script type="text/javascript" src="js/vendor/jquery.js"></script>
 		<script type="text/javascript" src="js/vendor/foundation.min.js"></script>
 		<script type="text/javascript" src="js/vendor/jquery.js"></script>
+		<script type="text/javascript" src="js/vendor/phaser.min.js"></script>
     </head>
     <body>
 		<div id="main-game">
