--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 					<div id="gameContainer"></div>
 				</div>
 			</div>
+			<script type="text/javascript" src="js/loadAssets.js"></script>
 			<script type="text/javascript" src="js/models/player.js"></script>
 			<script type="text/javascript" src="js/battle.js"></script>
 			<script type="text/javascript" src="js/inventory.js"></script>
