close with states

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 					<div id="gameContainer"></div>
 				</div>
 			</div>
+			<script type="text/javascript" src="js/bootState.js"></script>
+			<script type="text/javascript" src="js/stage1State.js"></script>
+			<script type="text/javascript" src="js/townState.js"></script>
 			<script type="text/javascript" src="js/speechText.js"></script>
 			<script type="text/javascript" src="js/loadAssets.js"></script>
 			<script type="text/javascript" src="js/models/player.js"></script>
